<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/universe1" />


    <EditText
        android:id="@+id/Word_Input_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:hint="@string/Word_Input"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#00BCD4"
        android:textColorHint="#00BCD4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />


    <TextView
        android:id="@+id/Select_EN_Dictionary_Provider_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Select_EN_Dictionary_Provider"
        android:textColor="#FFC107"
        android:textSize="15.5sp"
        app:layout_constraintStart_toStartOf="@+id/Word_Input_View"
        app:layout_constraintTop_toBottomOf="@+id/Word_Input_View" />


    <TextView
        android:id="@+id/Select_JP_Dictionary_Provider_View"
        android:layout_width="188dp"
        android:layout_height="21dp"
        android:layout_marginTop="50dp"
        android:text="@string/Select_JP_Dictionary_Provider"
        android:textColor="#FFC107"
        android:textSize="15.5sp"
        app:layout_constraintStart_toStartOf="@+id/Select_EN_Dictionary_Provider_View"
        app:layout_constraintTop_toBottomOf="@+id/Select_EN_Dictionary_Provider_View" />

    <TextView
        android:id="@+id/Select_Sentence_Searcher_View"
        android:layout_width="188dp"
        android:layout_height="21dp"
        android:layout_marginTop="50dp"
        android:text="@string/Select_Sentence_Searcher"
        android:textColor="#FFC107"
        android:textSize="15.5sp"
        app:layout_constraintStart_toStartOf="@+id/Select_Google_Word_Searcher_View"
        app:layout_constraintTop_toBottomOf="@+id/Select_Google_Word_Searcher_View" />


    <TextView
        android:id="@+id/Select_Google_Word_Searcher_View"
        android:layout_width="188dp"
        android:layout_height="21dp"
        android:layout_marginTop="50dp"
        android:text="@string/Select_Google_Word_Searcher"
        android:textColor="#FFC107"
        android:textSize="15.5sp"
        app:layout_constraintStart_toStartOf="@+id/Select_JP_Dictionary_Provider_View"
        app:layout_constraintTop_toBottomOf="@+id/Select_JP_Dictionary_Provider_View" />


    <TextView
        android:id="@+id/Miscellaneous_View"
        android:layout_width="188dp"
        android:layout_height="21dp"
        android:layout_marginTop="50dp"
        android:text="@string/Miscellaneous"
        android:textColor="#FFC107"
        android:textSize="15.5sp"
        app:layout_constraintStart_toStartOf="@+id/Select_Sentence_Searcher_View"
        app:layout_constraintTop_toBottomOf="@+id/Select_Sentence_Searcher_View" />


    <Spinner
        android:id="@+id/EN_dictionary_providers_spinner"
        android:layout_width="162dp"
        android:layout_height="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#bec2be"
        app:layout_constraintBottom_toBottomOf="@+id/Select_EN_Dictionary_Provider_View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Select_EN_Dictionary_Provider_View" />


    <Spinner
        android:id="@+id/JP_dictionary_providers_spinner"
        android:layout_width="157dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#bec2be"
        app:layout_constraintBottom_toBottomOf="@+id/Select_JP_Dictionary_Provider_View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Select_JP_Dictionary_Provider_View" />


    <Spinner
        android:id="@+id/Sentence_searcher_spinner"
        android:layout_width="157dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#bec2be"
        app:layout_constraintBottom_toBottomOf="@+id/Select_Sentence_Searcher_View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Select_Sentence_Searcher_View" />


    <Spinner
        android:id="@+id/Google_word_searcher_spinner"
        android:layout_width="157dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#bec2be"
        app:layout_constraintBottom_toBottomOf="@+id/Select_Google_Word_Searcher_View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Select_Google_Word_Searcher_View" />


    <Spinner
        android:id="@+id/Miscellaneous_searcher_spinner"
        android:layout_width="157dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#bec2be"
        app:layout_constraintBottom_toBottomOf="@+id/Miscellaneous_View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Miscellaneous_View" />


</android.support.constraint.ConstraintLayout>